# Voice-R

./: .gitignore  Makefile  README.md  render.yaml
.claude/: settings.json
.claude/commands/: finish-story.md  latency-check.md  log-decision.md  retro.md  standup.md  start-story.md
apps/dashboard/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/analytics/: page.tsx
apps/dashboard/app/appointments/: page.tsx
apps/dashboard/app/calls/[id]/: page.tsx
apps/dashboard/components/: kpi-card.tsx  latency-badge.tsx  outcome-badge.tsx  transcript-turn.tsx
apps/dashboard/lib/: supabase.ts  types.ts
apps/voice-agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/voice-agent/scripts/: stresstest.py
apps/voice-agent/src/: context_window.py  db.py  filler.py  llm_failover.py  logging_tap.py  main.py  pipeline.py  prompts.py  settings.py  sms.py  tools.py
apps/voice-agent/tests/: test_failover.py  test_filler.py  test_pipeline.py  test_prompts.py  test_tools.py
infra/env/: .env.example
infra/supabase/: 001_init.sql  002_seed_acme.sql
