[project]
name = "voice-agent"
version = "0.1.0"
description = "Voice AI receptionist — FastAPI + Pipecat pipeline (project #1 of Mission portfolio)"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Aditya Shrotriya" }]

# Pinning ranges, not exact versions, because Pipecat moves fast.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "supabase>=2.10",
    "twilio>=9.3",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
    # Pipecat + integrations. The extras pull in provider SDKs.
    "pipecat-ai[deepgram,groq,elevenlabs,google]>=1.0.0",  # twilio serializer is in core since v1.x
    "webrtcvad-wheels>=2.0.14",  # lightweight VAD; replaces silero to fit on disk
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ipython>=8.29",
]

[tool.uv]
package = false           # this is an app, not a library

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ARG"]
ignore = ["E501"]          # black handles line length

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
